--- a/corpus_analysis/corpus-analysis_analysis.ipynb
+++ b/corpus_analysis/corpus-analysis_analysis.ipynb
@@ -540,7 +540,7 @@
     "# transform to DataFrame\n",
     "corpus_df = pd.DataFrame(corpus)\n",
     "# delete text column\n",
-    "corpus_df.drop([\"text\"], axis=1)\n",
+    "corpus_df = corpus_df.drop([\"text\"], axis=1)\n",
     "corpus_df.head()"
    ]
   },
