--- a/corpus_analysis/corpus-analysis_visualization.ipynb
+++ b/corpus_analysis/corpus-analysis_visualization.ipynb
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "# 🚀 Load the results file from GitHub \n",
-    "#! wget https://raw.githubusercontent.com/dh-network/quadriga-fs-2/tree/develop/results/ -P ../results/"
+    "! wget https://media.githubusercontent.com/media/quadriga-dk/Text-Fallstudie-2/refs/heads/main/results/metadata_with_readability_scores.csv -P ../results/"
    ]
   },
   {
@@ -175,7 +175,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_df = pd.read_csv(result_path)"
+    "result_df = pd.read_csv(result_path)\n",
+    "\n",
+    "# Convert date to datetime\n",
+    "result_df['date'] = pd.to_datetime(result_df['date'], dayfirst=True)"
    ]
   },
   {
@@ -253,34 +256,110 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d230df90-0c42-4cb5-9874-a245acbbc0f2",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "id": "6565fcd6-c8c3-40a3-b388-491cec68f28b",
+   "metadata": {},
    "source": [
-    "## Korpus filtern \n",
-    "* bei Jahr (2011 - 2024) (brauchen wir wahrscheinlich nicht mehr)"
+    "### Übersicht über die Daten erhalten"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0f8dbeb-8569-4420-b161-41a2a780043e",
+   "metadata": {},
+   "source": [
+    "Wie viele Pressemitteilungen gab es pro Jahr?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "415db73b-1c42-4744-9cea-6108e0c07a28",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "id": "8ddc57a3-90a8-4bbe-b7eb-bde551ffc88c",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "result_df['date'] = pd.to_datetime(result_df['date'])\n",
-    "results_from_2011_df = result_df[result_df.date.dt.year >= 2011]"
+    "result_df.groupby(pd.PeriodIndex(result_df['date'], freq=\"Y\"))['n_tokens'].count().plot(kind=\"bar\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c6a404a-5e7b-4a0a-8eb2-50f060f1c2c1",
+   "metadata": {},
+   "source": [
+    "Wie lang sind die Pressemitteilungen im Schnitt in Wörtern?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "934000fc-733e-4769-9f8d-64bb32c14fce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df.groupby(pd.PeriodIndex(result_df['date'], freq=\"Y\"))['n_tokens'].mean().plot(kind=\"bar\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ce491a3-8fd8-4411-ae00-ff36d6c03776",
+   "metadata": {},
+   "source": [
+    "Wie viele Mitteilungen aus welcher Kategorie sind vorhanden?\n",
+    "Da die Anzahl der Kategorien hoch ist, zeigen wir nur die Kategorien, die mit 100 Mitteilungen oder mehr vertreten sind."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61ae3748-929a-493f-b8b6-eab088894e2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = result_df['source'].value_counts()\n",
+    "counts[counts > 100].plot(kind=\"bar\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae319ab2-0bff-4522-b172-017baa9a2e86",
+   "metadata": {},
+   "source": [
+    "### Extrahieren von schwierigsten und einfachsten Texten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f69dc61-fee5-45fb-970d-c1cd449ee7f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = [\"Flesch\", \"ARI\", \"Coleman_Liau\", \"Wiener_Sachtextformel\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4795da68-d194-48a4-a373-e9c1c6099fa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: prettify\n",
+    "for metric in metrics:\n",
+    "    print(metric)\n",
+    "    if metric == \"Flesch\":\n",
+    "        print(f\"Schwierigster Text: {result_df[result_df[metric] == result_df[metric].min()]['id']}\")\n",
+    "        print(f\"Leichester Text: {result_df[result_df[metric] == result_df[metric].max()]['id']}\\n\")\n",
+    "    else:\n",
+    "        print(f\"Schwierigster Text: {result_df[result_df[metric] == result_df[metric].max()]['id']}\")\n",
+    "        print(f\"Leichester Text: {result_df[result_df[metric] == result_df[metric].min()]['id']}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86bce25c-71ae-493d-bc7c-36cec0d4269f",
+   "metadata": {},
+   "source": [
+    "Wie zu sehen ist, überschneiden sich die Metriken in Bezug auf die Extremwerte (niedrigster und höchster Wert) nicht."
    ]
   },
   {
@@ -294,24 +373,8 @@
     "tags": []
    },
    "source": [
-    "## 3.2 Entwicklung über Zeit \n",
+    "## Entwicklung über Zeit \n",
     "* Vergleich der Metriken-Entwicklung über die Jahre "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "869a543f-146d-42c6-953e-b6acfcf5e58b",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "metrics = [\"Flesch\", \"ARI\", \"Coleman_Liau\", \"Wiener_Sachtextformel\"]"
    ]
   },
   {
@@ -327,7 +390,7 @@
    },
    "outputs": [],
    "source": [
-    "metric_mean_year_df = results_from_2011_df.groupby(pd.PeriodIndex(results_from_2011_df['date'], freq=\"Y\"))[metrics].mean()"
+    "metric_mean_year_df = result_df.groupby(pd.PeriodIndex(result_df['date'], freq=\"Y\"))[metrics].mean()"
    ]
   },
   {
@@ -386,8 +449,7 @@
    },
    "source": [
     "### 3.2 Interaktive Analysedaten vorbereiten\n",
-    "* filter by metric\n",
-    "* filter by time"
+    "Wir wollen die Daten nun nach den Parametern der Metrik und der Granularität der Zeitschiene einteilen."
    ]
   },
   {
@@ -422,7 +484,7 @@
    },
    "outputs": [],
    "source": [
-    "results_filtered = results_from_2011_df[columns_to_keep]"
+    "results_filtered = result_df[columns_to_keep]"
    ]
   },
   {
@@ -517,7 +579,7 @@
    "outputs": [],
    "source": [
     "# not interactive yet, updating needs to be fixed\n",
-    "plot_with_js(results_filtered)"
+    "plot_with_js(result_df)"
    ]
   }
  ],
