add skip-execution tag

--- a/corpus_analysis/corpus-analysis_visualization.ipynb
+++ b/corpus_analysis/corpus-analysis_visualization.ipynb
@@ -138,7 +138,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a8ef6bd6-cd83-45fe-ad96-d90267c12d9e",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# 🚀 Create result directory path\n",
@@ -151,7 +157,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "010e6e62-448d-439c-adf7-04ccc3362b2e",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "skip-execution",
+     "hide-cell",
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# 🚀 Load the results file from GitHub \n",
@@ -162,7 +178,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "017acba9-ee2e-4204-97d2-dc712b320212",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "result_path = result_dir / r\"metadata_with_readability_scores.csv\""
@@ -247,17 +269,19 @@
     "tags": []
    },
    "source": [
-    "## Analyse\n",
-    "\n",
-    "__ Show Max und Min-Werte --> can be done with dataframe__ ?\n",
-    "* stimmen die Metriken bei der Bestimmung von Max und Min-Werten überein?\n",
-    "* Anzeigen der Sätze? "
+    "## Analyse"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6565fcd6-c8c3-40a3-b388-491cec68f28b",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "### Übersicht über die Daten erhalten"
    ]
@@ -265,7 +289,13 @@
   {
    "cell_type": "markdown",
    "id": "f0f8dbeb-8569-4420-b161-41a2a780043e",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Wie viele Pressemitteilungen gab es pro Jahr?"
    ]
@@ -292,7 +322,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "934000fc-733e-4769-9f8d-64bb32c14fce",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "result_df.groupby(pd.PeriodIndex(result_df['date'], freq=\"Y\"))['n_tokens'].mean().plot(kind=\"bar\")"
@@ -301,7 +337,13 @@
   {
    "cell_type": "markdown",
    "id": "2ce491a3-8fd8-4411-ae00-ff36d6c03776",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Wie viele Mitteilungen aus welcher Kategorie sind vorhanden?\n",
     "Da die Anzahl der Kategorien hoch ist, zeigen wir nur die Kategorien, die mit 100 Mitteilungen oder mehr vertreten sind."
