--- a/corpus_analysis/corpus-analysis_visualization.ipynb
+++ b/corpus_analysis/corpus-analysis_visualization.ipynb
@@ -551,8 +551,6 @@
    ],
    "source": [
     "result_df = pd.read_csv(result_path, sep=\",\")\n",
-    "print(type(result_df))\n",
-    "print(result_df.columns)\n",
     "\n",
     "# Convert date to datetime\n",
     "result_df['date'] = pd.to_datetime(result_df['date'], dayfirst=True)"
@@ -1293,7 +1291,9 @@
     "slideshow": {
      "slide_type": ""
     },
-    "tags": []
+    "tags": [
+     "hide-cell"
+    ]
    },
    "outputs": [],
    "source": [
