fix flow-chart references and outdated references in the notebooks

--- a/scraping_intro/scraping_method-overview.ipynb
+++ b/scraping_intro/scraping_method-overview.ipynb
@@ -25,6 +25,18 @@
    "metadata": {},
    "source": [
     "## Hinweise zur Ausführung des Notebooks\n",
+    "Dieses Notebook kann auf unterschiedlichen Levels erarbeitet werden (siehe Abschnitt [\"Technische Voraussetzungen\"](../introduction/introduction_requirements)): \n",
+    "1. Book-Only Mode\n",
+    "2. Cloud Mode: Dafür auf 🚀 klicken und z.B. in Colab ausführen.\n",
+    "3. Local Mode: Dafür auf Herunterladen ↓ klicken und \".ipynb\" wählen. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2a5e988-19ab-44be-971e-d9d81fc6d7dd",
+   "metadata": {},
+   "source": [
+    "## Hinweise zur Ausführung des Notebooks\n",
     "Dieses Notebook kann auf unterschiedlichen Levels erarbeitet werden (siehe Abschnitt [\"Technische Voraussetzungen\"](../markdown/introduction_requirements)): \n",
     "1. Book-Only Mode\n",
     "2. Cloud Mode: Dafür auf 🚀 klicken und z.B. in Colab ausführen.\n",
