add references and change ref style

--- a/references.bib
+++ b/references.bib
@@ -83,6 +83,30 @@
 	year = {2019},
 }
 
+@Inbook{schoech2017,
+	author="Sch{\"o}ch, Christof",
+	editor="Jannidis, Fotis
+	and Kohle, Hubertus
+	and Rehbein, Malte",
+	title="Aufbau von Datensammlungen",
+	bookTitle="Digital Humanities: Eine Einf{\"u}hrung",
+	year="2017",
+	publisher="J.B. Metzler",
+	address="Stuttgart",
+	pages="223--233",
+	doi="10.1007/978-3-476-05446-3_16",
+}
+
+@incollection{fortext-2020-id-203,
+  Author = {Sandra Bläß},
+  year = {2020},
+  Title = {Korpusbildung},
+  BookTitle = {forTEXT},
+  BookSubtitle = {Literatur digital erforschen},
+  URL = {https://fortext.net/routinen/methoden/korpusbildung},
+  URLDate = {2024-06-26},
+}
+
 
 @article{executable_books_community_2021_2561065,
   author       = {Executable Books Community},
