--- a/references.bib
+++ b/references.bib
@@ -32,7 +32,7 @@
 	publisher = {Impact Information},
 	author = {{DuBay}, William H.},
 	urldate = {2025-05-16},
-	date = {2004},
+	year = {2004},
 }
 
 @book{maas_handbuch_2019,
